--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,6 +23,6 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore daytrain_1/daytrain_1.sln
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build --no-restore daytrain_1/daytrain_1.sln
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test --no-build --verbosity normal training_1/training_1.csproj
