--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,8 +28,9 @@ jobs:
       run: dotnet test --no-build --verbosity normal training_1/training_1.csproj
     - name: SonarCloud Scan
       uses: SonarSource/sonarcloud-github-action@v1.9
+      env:
+        SONAR_TOKEN: ${{ test.SONAR_TOKEN }}
       with:
         projectBaseDir: daytrain_1/daytrain_1.sln
-      env:
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+     
         
