--- a/daytrain_1/sonar-project.properties
+++ b/daytrain_1/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.organization=Christian
-sonar.projectKey=cubidesrojas
+sonar.organization=cubidesrojas
+sonar.projectKey=cubidesrojas_training_1
 
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
